Fix for bug 140060 (ReplaceChild on a document's documentElement fails). r=bz, sr=jst.